fixed score systems and database connections

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
-        
+        implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.4.0'
     }
 }
 
